ci: Setup sonar-project.propreties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
-sonar.projectKey=node-test
-sonar.projectName=node-test
+sonar.projectKey=bellonrubens_desafioci
+sonar.organization=bellonrubens
+
+sonar.projectName=desafioci
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.exclusions=**/*.test.ts
